--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - master
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -35,3 +36,16 @@ jobs:
       # Verify Pushed Image
       - name: Verify Pushed Image
         run: docker pull hemanth0/test_repo:latest
+
+      # Deploy to EC2
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }} # Make sure this matches the secret name
+          script: |
+            sudo docker pull hemanth0/test_repo:latest
+            sudo docker stop test_repo || true
+            sudo docker rm test_repo || true
+            sudo docker run -d --name test_repo -p 3005:1000 hemanth0/test_repo:latest
