--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,12 +39,13 @@ jobs:
 
       # Deploy to EC2
       - name: Deploy to EC2
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v0.1.0
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_KEY }} # Make sure this matches the secret name
+          key: ${{ secrets.SSH_KEY }}
           script: |
+            set -e  # Exit immediately if a command exits with a non-zero status
             sudo docker pull hemanth0/test_repo:latest
             sudo docker stop test_repo || true
             sudo docker rm test_repo || true
